--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "npm run build; node app.js",
-    "dev": "webpack-dev-server --config webpack.dev.config.js --hot --quiet",
+    "dev": "node dev.server.js",
     "build": "webpack --config webpack.pro.config.js; webpack --config webpack.server.config.js"
   },
   "author": "Jerome.Lin <16908091@qq.com>",
@@ -20,8 +20,8 @@
     "winston": "^0.8.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "classnames": "^2.1.3",
     "react-router": "^1.0.0-rc3",
+    "classnames": "^2.1.3",
     "history": "^1.13.0"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "style-loader": "^0.12.3",
     "css-loader": "^0.15.6",
     "sass-loader": "^1.0.3",
+    "react-hot-loader": "^1.3.0",
     "autoprefixer-loader": "^3.1.0",
     "bundle-loader": "^0.5.0",
     "webpack-dev-server": "^1.10.1"
